--- a/config/templates/session/settings.html
+++ b/config/templates/session/settings.html
@@ -394,7 +394,14 @@
 
 {% block js %}
 <script type="text/javascript">
-    
+    $(document).ready(function() {
+        $(window).keydown(function(event){
+            if(event.keyCode == 13) {
+              event.preventDefault();
+              return false;
+            }
+        });
+    });
     $(".filter-collapsed-bar").click(function () {
 
         $header = $(".filter-collapsed-bar");
