--- a/config/templates/audition_management/editRole.html
+++ b/config/templates/audition_management/editRole.html
@@ -197,6 +197,10 @@
                     }
                     else {
                         // do nothing, typing
+                        if (app.insert[app.insert.length - 1] == '"' || app.insert[app.insert.length - 1] == "'" || app.insert[app.insert.length - 1] == '\\') {
+                            console.log("illegal character");
+                            app.insert = app.insert.substring(0, app.insert.length - 1)
+                        }
                     }
                 },
                 removeTags: function() {
