--- a/config/templates/session/settings.html
+++ b/config/templates/session/settings.html
@@ -123,8 +123,9 @@
                                             </div>
                                             <div class="modal-body">
                                                 {% if is_casting %}
+                                                <iframe width="560" height="315" src="https://www.youtube.com/embed/k0XN8JZiRms" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
                                                 {% else %}
-                                                Coming Soon
+                                                <iframe width="560" height="315" src="https://www.youtube.com/embed/gZDtFA3-_Qo" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
                                                 {% endif %}
                                             </div>
                                             <div class="modal-footer">
