--- a/config/templates/session/settings.html
+++ b/config/templates/session/settings.html
@@ -269,6 +269,50 @@
             </div>
         </div>
     </div>
+    {% else %}
+    <div class="row">
+        <div class="col-lg-12">
+            <div class="panel panel-info">
+                <div class="panel-heading">
+                    <h4>Professional Information</h4>
+                    <small id="emailHelp" class="form-text text-muted">This section is visible to prospective auditioners looking to apply for roles you've created.</small>
+                </div>
+                <div class="panel-body">
+                    <div class="row">
+                        <div class="col-lg-12">
+                            <form class="form-horizontal" style="margin:20px;" method="post">
+                                <div class="form-group">
+                                    <input type="hidden" name="form_type" value="casting_form">
+                                </div>
+                                {% csrf_token %}
+                                {% for field in casting_form %}
+                                <div class="form-group">
+                                    {{ field.label_tag }}
+                                    {% render_field field class+="form-control" %}
+                                    {% if field.help_text %}
+                                    <small class="form-text text-muted" >{{ field.help_text }}</small>
+                                    {% endif %}
+                                </div>
+                                {% if field.errors|length > 0 %}
+                                <div class="form-group">
+                                    <ul>
+                                        {% for error in field.errors %}
+                                        <li style="color: red">{{ error }}</li>
+                                        {% endfor %}
+                                    </ul>
+                                </div>
+                                {% endif %}
+                                {% endfor %}
+                                <div class="form-group">
+                                    <button type="submit" class="btn btn-primary">Save Changes</button>
+                                </div>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 {% endif %}
 <div class="row">
     <div class="col-lg-12">
