Fixing settings page

--- a/config/templates/audition_management/role.html
+++ b/config/templates/audition_management/role.html
@@ -9,7 +9,8 @@
 		<div class="col-sm-6">
 			<div class="panel panel-primary">
 				<div class="panel-heading">
-					<h2 class='text-center'> {{role.name}} </h2>
+					<h2 class='text-center'> {{role.name}} </h2> <br>
+					<span># of times this role has been viewed: {{views}}</span>
 				</div>
 				<div class="panel-body">
 					<div class="row">
