Fixing settings page

--- a/config/templates/audition_management/role.html
+++ b/config/templates/audition_management/role.html
@@ -10,7 +10,7 @@
 			<div class="panel panel-primary">
 				<div class="panel-heading">
 					<h2 class='text-center'> {{role.name}} </h2> <br>
-					<span># of times this role has been viewed: {{views}}</span>
+					<span># of prospective auditioners that have viewed this role: {{views}}</span>
 				</div>
 				<div class="panel-body">
 					<div class="row">
