--- a/config/templates/audition_management/role.html
+++ b/config/templates/audition_management/role.html
@@ -4,13 +4,13 @@
 {% block title %}Role{% endblock %}
 
 {% block content %}
+<span># of prospective auditioners that have viewed this role: {{views}}</span>
 <div id="roleDiv">
 	<div class="row">
 		<div class="col-sm-6">
 			<div class="panel panel-primary">
 				<div class="panel-heading">
-					<h2 class='text-center'> {{role.name}} </h2> <br>
-					<span># of prospective auditioners that have viewed this role: {{views}}</span>
+					<h2 class='text-center'> {{role.name}} </h2>
 				</div>
 				<div class="panel-body">
 					<div class="row">
